[package]
name = "rust-beats"
version = "0.1.0"
authors = ["Torre Taylor"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.62"
lazy_static = "1.4.0"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Text',
  'console',
]
