[package]
name = "rust-fel"  
version = "0.1.2" # // Must be kept in sync with html_root_url
authors = ["Torre Taylor"]
edition = "2018"
repository = "https://github.com/tostaylo/rust-fel"
homepage = "https://github.com/tostaylo/rust-fel"
license = "MIT"
readme = "./README.md"
keywords = ["web", "rust", "wasm", "javascript"]
categories = ["gui", "web-programming"]
description = "A small library for making client-side single-page apps"

[dependencies]
wasm-bindgen = "0.2.67"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'NodeList',
  'Window',
  'Text',
]
