[package]
name = "rust-fel-example"
version = "0.1.0"
authors = ["Torre Taylor"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.62"

[dependencies.rust-fel]
path = "../" 

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'NodeList',
  'Window',
  'Text',
  'console',
]
