[package]
name = "rust-fel-example"
version = "0.1.0"
authors = ["Torre Taylor"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
console_error_panic_hook = "0.1.6"

[dependencies.rust-fel]
path = "../" 


[dependencies.web-sys]
version = "0.3.44"
features = [
  'Document', 
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'NodeList',
  'Window',
  'Text',
]